<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.AddEditNoteActivity">


    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_big"
        android:fontFamily="@font/sf"
        android:paddingStart="@dimen/margin_default"
        android:paddingEnd="@dimen/margin_default"
        android:text="@string/my_option"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:fontFamily="@font/sf"
        android:hint="@string/option_hint"
        android:textColorHint="@color/light_blue_1"
        app:boxCornerRadiusBottomEnd="@dimen/radius_default"
        app:boxCornerRadiusBottomStart="@dimen/radius_default"
        app:boxCornerRadiusTopEnd="@dimen/radius_default"
        app:boxCornerRadiusTopStart="@dimen/radius_default"
        app:endIconContentDescription="end_icon"
        app:endIconMode="clear_text"
        app:endIconTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_cancel"
            android:fontFamily="@font/sf"
            android:textColor="@color/dark_blue"
            android:textColorHighlight="@color/yellow"
            android:textCursorDrawable="@color/blue"
            android:textSize="@dimen/text_size_big" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save_note"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_size_default"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/shape_button_long_round"
        android:backgroundTint="@color/blue"
        android:drawableStart="@drawable/ic_arrow_left"
        android:fontFamily="@font/sf"
        android:paddingStart="@dimen/margin_default"
        android:paddingEnd="@dimen/margin_default"
        android:text="@string/ok_button"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_micro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

    <Button
        android:id="@+id/button_micro"
        android:layout_width="@dimen/button_size_default"
        android:layout_height="@dimen/button_size_default"
        android:background="@drawable/shape_button_round"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/fa_old"
        android:text="@string/fa_microphone"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_save_note"
        app:layout_constraintTop_toTopOf="@+id/button_save_note" />

</androidx.constraintlayout.widget.ConstraintLayout>